--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "keywords": [
     "JavaScript",
     "assign",
-    "declaration"
+    "declaration",
+    "ObjectPattern",
+    "ES6"
   ],
   "author": "Wang Xiaobo",
   "license": "ISC",
