--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "js-assign",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "Safer destructuring assignment with JavaScript",
   "main": "index.js",
   "scripts": {
@@ -16,8 +16,8 @@
   "author": "Wang Xiaobo",
   "license": "ISC",
   "dependencies": {
-    "escodegen": "^1.14.1",
-    "esprima": "^4.0.1",
-    "estraverse": "^5.1.0"
+    "@babel/generator": "^7.9.6",
+    "@babel/parser": "^7.9.6",
+    "@babel/traverse": "^7.9.6"
   }
 }
